Fix broken link on GitHub

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ layout: base
 
         table.innerHTML += `<tr>
             <td><a href="{{ site.url }}/${link}">${link}</a></td>
-            <td><a href="{{ site.url}}/full/#${chapter}">Chapter ${chapters[chapter].number}</a></td>
+            <td><a href="{{ site.url}}/full#${chapter}">Chapter ${chapters[chapter].number}</a></td>
         </tr>`;
     });
 </script>
